# plenoxels

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
example_tracer/: example_tracer.cpp  example_tracer.h  plenoxels.cpp  plenoxels.h  plenoxels_gpu.cpp  plenoxels_gpu.h
shaders/: compile.sh  plenoxel.slang
